--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>raise your hand and start to dream</title>
+</head>
 <body>
     <div class="banner">
         <div>
