--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>raise your hand and start to dream</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="banner">
